# FunKit

./: .gitignore  CMakeLists.txt  FEDeriK.m  FEDeriK.nb  FunKit.m  FunKit.nb  FunKitInstaller.m  FunKitInstaller.nb  PacletInfo.m  README.md  Testing.nb  make_zip.sh
.github/workflows/: run-tests.yml
dependencies/: .gitignore  install.bat  install.sh  update_to_latest.sh
examples/: Gravity.nb  ScalarTheory.nb
modules/: AnSEL.m  AnSEL.nb  COEN.m  COEN.nb  DiANE.m  DiANE.nb  DiRK.m  DiRK.nb  FEDeriK.m  FEDeriK.nb  SeDecA.m  SeDecA.nb  TRACY.m  TRACY.nb
modules/AnSEL/: Global.m  Routing.m  Simplify.m
modules/COEN/: Cpp.m  Fortran.m  Julia.m  Tools.m
modules/DiANE/: FPlot.m  FPrint.m  Global.m
modules/DiRK/: FMakeDiagrammaticRules.m  Global.m  Tools.m
modules/FEDeriK/: Algebra.m  Checks.m  Cleaning.m  Compatibility.m  Derivatives.m  Expansions.m  FunctionalD.m  Global.m  IndexedObjects.m  MasterEquations.m  Metric.m  Notation.m  Ordering.m  SuperIndexTransformations.m  Truncation.m
modules/TRACY/: Cache.m  FORM.m  Tools.m  Tracing.m
modules/common/: util.m
publication/: FunKit.blg  FunKit.fdb_latexmk  FunKit.fls  FunKit.tex  bibliography.bib
tests/: FEDeriKTests.m  ScalarRoutingTests.m  ScalarTests.m  Test.m  TestRunner.m  init.m
tests/COEN/: CppTests.m  JuliaTests.m
tests/Scalar/: DerivativeTests.m
tests/Yukawa/: DerivativeTests.m
tests/boilerplate/: setups.m
tests/util/: getDoFun.m  getFORMTracer.m  getQMeS.m  getTensorBases.m
